Created the home-page section and stikcy nav.
Working on the change password form.

--- a/index.html
+++ b/index.html
@@ -58,15 +58,30 @@
       </div>
     </div>
   </section>
-  <!--////////////////////////////////////FIRST PAGE////////////////////////////////////////////////////////////////////////////-->
-  <section class="main-menu">
+  <!--/////////////////////////////////// NAV BAR /////////////////////////////////////////////////////////////////////////////-->
+  <div id="navbar" class="navbar navbar-expand-lg navbar-light" style="background: #1161ee; height: 80px; font-weight: bold">
+    <a href="#" id="about-option">ABOUT</a>
+    <a href="#">Learn Logical Fallacies</a>
+    <a href="#">Create an Example</a>
+    <a href="#">See other examples</a>
+    <a href="#">Change Password</a>
+    <a id="">Sign Out</a>
+  </div>
+
+  <!--////////////////////////////////////Home Menu////////////////////////////////////////////////////////////////////////////-->
+  <section class="home-menu">
     <div class="fancy jumbotron">
       <h3 class=""> Know your audience </h3>
+
+      <button type="button" class="btn btn-primary btn-block">SEE ALL SURVEYS</button>
+      <button type="button" class="btn btn-primary btn-block">CREATE YOUR OWN SURVEY</button>
+
+
 
     </div>
   </section>
 
-  <!--////////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
+  <!--/////////////////////////////////////Change Password Form///////////////////////////////////////////////////////////////////////////-->
 
 
 
