Created change password form and fixed sticky nav.
Currently working in the Create survey section

--- a/index.html
+++ b/index.html
@@ -60,12 +60,11 @@
   </section>
   <!--/////////////////////////////////// NAV BAR /////////////////////////////////////////////////////////////////////////////-->
   <div id="navbar" class="navbar navbar-expand-lg navbar-light" style="background: #1161ee; height: 80px; font-weight: bold">
-    <a href="#" id="about-option">ABOUT</a>
-    <a href="#">Learn Logical Fallacies</a>
-    <a href="#">Create an Example</a>
-    <a href="#">See other examples</a>
-    <a href="#">Change Password</a>
-    <a id="">Sign Out</a>
+    <a href="#" id="about-option">HOME</a>
+    <a href="#">SEE ALL SURVEYS</a>
+    <a href="#">CREATE SURVEY</a>
+    <a href="#change-password-section">CHANGE PASSWORD</a>
+    <a id=""><button class="btn btn-danger">SIGN OUT</button></a>
   </div>
 
   <!--////////////////////////////////////Home Menu////////////////////////////////////////////////////////////////////////////-->
@@ -83,6 +82,24 @@
 
   <!--/////////////////////////////////////Change Password Form///////////////////////////////////////////////////////////////////////////-->
 
+  <section class="change-password-section" id="change-password-section">
+    <div class="change-password-div jumbotron">
+      <form id="change-password-form">
+        <fieldset>
+          <legend> Change Password? </legend>
+          <input placeholder="Enter your old password" name="passwords[old]" class="form-control" style="width: 300px"
+            type="email" />
+          <input placeholder="Enter your new password" name="passwords[new]" class="form-control" style="width: 300px"
+            type="password" />
+          <br />
+          <input type="submit" class='theButton btn btn-primary' value="Log In !" />
+        </fieldset>
+      </form>
+      <h3 id="display-log-in-message">
+        <!--Status shall be displayed here-->
+      </h3>
+    </div>
+  </section>
 
 
 
