successful survey creation using create-survey form
- update survey form with correct ID
- update survey form with correct name tag
- remove double invocation in app.js

--- a/index.html
+++ b/index.html
@@ -146,13 +146,13 @@
   </section> -->
 
   <!--///////////////////////////CREATE SURVEY////////////////////////////////////////////-->
-  <section class="create-survey-section" id="create-survey-section" style="display: block">
+  <section class="new-survey-section" id="create-survey-section" style="display: block">
     <div class="create-survey-div jumbotron">
       <div>
         <h3>What Question will your survey ask?</h3>
       </div>
-      <form>
-        <textarea name="survey-question" cols="30" rows="10" class="notes"></textarea>
+      <form id="new-survey-form">
+        <textarea name="survey[question]" cols="30" rows="10" class="notes"></textarea>
         <button type="submit" class="btn btn-block btn-primary" style="width: 250px">SUBMIT SURVEY</button>
       </form>
     </div>
