--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <a href="#see-all-surveys-section">SEE ALL SURVEYS</a>
     <a href="#create-survey-section">CREATE SURVEY</a>
     <a href="#change-password-section">CHANGE PASSWORD</a>
-    <a id=""><button class="btn btn-danger">SIGN OUT</button></a>
+    <a id="sign-out"><button class="btn btn-danger">SIGN OUT</button></a>
   </div>
 
   <!--////////////////////////////////////Home Menu////////////////////////////////////////////////////////////////////////////-->
@@ -88,7 +88,7 @@
         <fieldset>
           <legend> Change Password? </legend>
           <input placeholder="Enter your old password" name="passwords[old]" class="form-control" style="width: 300px"
-            type="email" />
+            type="password" />
           <input placeholder="Enter your new password" name="passwords[new]" class="form-control" style="width: 300px"
             type="password" />
           <br />
