Added background pictures + other aesthetic features
Looking forward to working with the handlebars-script and giving a 'parallax effect' to one of the pictures

--- a/index.html
+++ b/index.html
@@ -14,11 +14,21 @@
 </head>
 
 <body>
-  <!--///////////////////////////////////////SIGN UP / LOG IN FORM /////////////////////////////////////////////////////////////////////////-->
+  <!--////////////////////////////////////// FIRST NAV BAR /////////////////////////////////////-->
   <section class="sign-up-log-in">
+    <div id="navbar-at-sign-up" class="navbar navbar-expand-lg navbar-light" style="background: #1161ee; height: 80px; font-weight: bold">
+      <a style="margin: 0 auto; color: white;"> BEST SURVEY PROJECT </a>
+      <a style="margin: 0 auto; color: white;"> ABOUT </a>
+      <a style="margin: 0 auto; color: white;"> ANOTHER </a>
+      <a style="margin: 0 auto; color: white;"> LOST HORIZON TEAM </a>
+    </div>
+
+
+    <!--///////////////////////////////////////SIGN UP / LOG IN FORM /////////////////////////////////////////////////////////////////////////-->
     <div class="container-fluid sign-in-and-out">
       <div class="makeInline1">
         <div class="sign-up-div jumbotron">
+
           <form id="sign-up-form">
             <fieldset>
               <legend> Sign up </legend>
@@ -58,17 +68,21 @@
       </div>
     </div>
   </section>
-  <!--/////////////////////////////////// NAV BAR /////////////////////////////////////////////////////////////////////////////-->
-  <div id="navbar" class="navbar navbar-expand-lg navbar-light" style="background: #1161ee; height: 80px; font-weight: bold">
-    <a href="#home-menu" id="">HOME</a>
-    <a href="#see-all-surveys-section">SEE ALL SURVEYS</a>
-    <a href="#create-survey-section">CREATE SURVEY</a>
-    <a href="#change-password-section">CHANGE PASSWORD</a>
-    <a id="sign-out"><button class="btn btn-danger">SIGN OUT</button></a>
-  </div>
 
-  <!--////////////////////////////////////Home Menu////////////////////////////////////////////////////////////////////////////-->
+  <!--////////////////////////////////////Home Menu STARTS////////////////////////////////////////////////////////////////////////////-->
+
   <section class="home-menu" id="home-menu">
+
+    <!--/////////////////////////////////// NAV BAR /////////////////////////////////////////////////////////////////////////////-->
+    <div id="navbar" class="navbar navbar-expand-lg navbar-light" style="background: #1161ee; height: 80px; font-weight: bold">
+      <a href="#home-menu" id="">HOME</a>
+      <a href="#see-all-surveys-section">SEE ALL SURVEYS</a>
+      <a href="#create-survey-section">CREATE SURVEY</a>
+      <a href="#change-password-section">CHANGE PASSWORD</a>
+      <a id=""><button class="btn btn-danger">SIGN OUT</button></a>
+    </div>
+    <!--/////////////////////////////////// NAV BAR ENDS /////////////////////////////////////////////////////////////////////////////-->
+
     <div class="fancy jumbotron">
       <h3 class=""> Know your audience </h3>
 
@@ -101,28 +115,9 @@
     </div>
   </section>
 
-  <!--///////////////////////////ANSWER SURVEY////////////////////////////////////////////-->
-  <section class="see-all-surveys-section" id="see-all-surveys-section">
-    <div class="row">
-      <h3 style="margin-left: 20px"> Question </h3>
-      <div class="col jumbotron">
-        <p>The question of the survey (which I assume will look something like
-          the
-          folowing: {{log.question}}) is going to be here, so... there...</p>
-      </div>
+  <!--///////////////////////////SEE ALL + ANSWER SURVEY////////////////////////////////////////////-->
+  <section id="handlebars-go-here"> </section>
 
-      <div class="col">
-        Answer either true or false for this question
-        <div class="row" style="margin-left: .1%">
-          <div class="col button-true-div">
-            <button class="btn btn-success"> TRUE </button>
-          </div>
-          <div class="col">
-            <button class="btn btn-danger"> FALSE </button>
-          </div>
-        </div>
-      </div>
-    </div>
 
   <!--///////////////////////////CREATE SURVEY////////////////////////////////////////////-->
   <section class="new-survey-section" id="create-survey-section" style="display: block">
