add hidden scss class and apply to jumbotron

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
   <!--///////////////////////////CREATE SURVEY////////////////////////////////////////////-->
   <section class="new-survey-section" id="create-survey-section" style="display: block">
-    <div class="create-survey-div jumbotron">
+    <div class="create-survey-div jumbotron hidden">
       <div>
         <h3>What Question will your survey ask?</h3>
       </div>
