Add hidden class to create survey, nav bar, home menu, change password, and answer survey.

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
   <!--/////////////////////////////////////Change Password Form///////////////////////////////////////////////////////////////////////////-->
 
-  <section class="change-password-section" id="change-password-section">
+  <section class="change-password-section hidden" id="change-password-section">
     <div class="change-password-div jumbotron">
       <form id="change-password-form">
         <fieldset>
