Add a display message for the user in the nav bar
Created Ui messages for user based on the actions they take
Actions include show one, show all, create, destroy, and update surveys

--- a/index.html
+++ b/index.html
@@ -68,28 +68,25 @@
       </div>
     </div>
   </section>
+  <!--/////////////////////////////////// NAV BAR /////////////////////////////////////////////////////////////////////////////-->
+  <div id="navbar" class="navbar navbar-expand-lg navbar-light hidden" style="background: #1161ee; height: 80px; font-weight: bold">
+    <a href="#home-menu" id="">HOME</a>
+    <a href="#see-all-surveys-section">SEE ALL SURVEYS</a>
+    <a href="#create-survey-section">CREATE SURVEY</a>
+    <a href="#change-password-section">CHANGE PASSWORD</a>
+    <a id="sign-out"><button class="btn btn-danger">SIGN OUT</button></a>
+    <h3 id="display-survey-message">
+      <!--Survey status displayed here -->
+    </h3>
+  </div>
 
-  <!--////////////////////////////////////Home Menu STARTS////////////////////////////////////////////////////////////////////////////-->
-
-  <section class="home-menu" id="home-menu">
-
-    <!--/////////////////////////////////// NAV BAR /////////////////////////////////////////////////////////////////////////////-->
-    <div id="navbar" class="navbar navbar-expand-lg navbar-light" style="background: #1161ee; height: 80px; font-weight: bold">
-      <a href="#home-menu" id="">HOME</a>
-      <a href="#see-all-surveys-section">SEE ALL SURVEYS</a>
-      <a href="#create-survey-section">CREATE SURVEY</a>
-      <a href="#change-password-section">CHANGE PASSWORD</a>
-      <a id=""><button class="btn btn-danger">SIGN OUT</button></a>
-    </div>
-    <!--/////////////////////////////////// NAV BAR ENDS /////////////////////////////////////////////////////////////////////////////-->
-
+  <!--////////////////////////////////////Home Menu////////////////////////////////////////////////////////////////////////////-->
+  <section class="home-menu hidden" id="home-menu">
     <div class="fancy jumbotron">
       <h3 class=""> Know your audience </h3>
 
       <button type="button" class="btn btn-primary btn-block" id="show-all-surveys">SEE ALL SURVEYS</button>
       <button type="button" class="btn btn-primary btn-block">CREATE YOUR OWN SURVEY</button>
-
-
 
     </div>
   </section>
