successful at adding survey response!!
- currently only patching 'true'
- needs event.ui to do something (currently doing nothing)
- tested!

collab: alfredrafael

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <div class="fancy jumbotron">
       <h3 class=""> Know your audience </h3>
 
-      <button type="button" class="btn btn-primary btn-block">SEE ALL SURVEYS</button>
+      <button type="button" class="btn btn-primary btn-block" id="show-all-surveys">SEE ALL SURVEYS</button>
       <button type="button" class="btn btn-primary btn-block">CREATE YOUR OWN SURVEY</button>
 
 
@@ -115,9 +115,28 @@
     </div>
   </section>
 
-  <!--///////////////////////////SEE ALL + ANSWER SURVEY////////////////////////////////////////////-->
-  <section id="handlebars-go-here"> </section>
+  <!--///////////////////////////ANSWER SURVEY////////////////////////////////////////////-->
+  <section class="see-all-surveys-section survey-component" id="see-all-surveys-section">
+    <!-- <div class="row">
+      <h3 style="margin-left: 20px"> Question </h3>
+      <div class="col jumbotron">
+        <p>The question of the survey (which I assume will look something like
+          the
+          folowing: {{log.question}}) is going to be here, so... there...</p>
+      </div>
 
+      <div class="col">
+        Answer either true or false for this question
+        <div class="row" style="margin-left: .1%">
+          <div class="col button-true-div">
+            <button class="btn btn-success"> TRUE </button>
+          </div>
+          <div class="col">
+            <button class="btn btn-danger"> FALSE </button>
+          </div>
+        </div>
+      </div> -->
+    </div>
 
   <!--///////////////////////////CREATE SURVEY////////////////////////////////////////////-->
   <section class="new-survey-section" id="create-survey-section" style="display: block">
