successfully show my surveys!

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
     <div class="fancy jumbotron">
       <h3 class=""> Know your audience </h3>
 
+      <button type="button" class="btn btn-primary btn-block" id="show-my-surveys">MANAGE MY SURVEYS</button>
       <button type="button" class="btn btn-primary btn-block" id="show-all-surveys">SEE ALL SURVEYS</button>
       <button type="button" class="btn btn-primary btn-block">CREATE YOUR OWN SURVEY</button>
 
@@ -125,6 +126,11 @@
     </div>
   </section>
 
+  <!-- MY SURVEYS SECTION -->
+  <h2>these are my surveys!</h2>
+  <section class="see-my-surveys-section my-surveys-component" id="see-my-surveys-section">
+  </section>
+
   <!--///////////////////////////ANSWER SURVEY////////////////////////////////////////////-->
   <section class="see-all-surveys-section survey-component" id="see-all-surveys-section">
     <!-- <div class="row">
@@ -146,7 +152,7 @@
           </div>
         </div>
       </div> -->
-    </section>
+  </section>
 
 
 
