add functionality to survey manager
- cannot vote
- can delete (not functional yet)
- can view responses
- logical message if no responses yet.

--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
   </section>
 
   <!-- MY SURVEYS SECTION -->
-  <h2>these are my surveys!</h2>
-  <section class="see-my-surveys-section my-surveys-component" id="see-my-surveys-section">
+  <section class="see-my-surveys-section my-surveys-component hidden" id="see-my-surveys-section">
+    <h2>these are my surveys!</h2>
   </section>
 
   <!--///////////////////////////ANSWER SURVEY////////////////////////////////////////////-->
