Close hanging section tag
Switch around html sections

removed id in button on html

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <h3 class=""> Know your audience </h3>
 
       <button type="button" class="btn btn-primary btn-block" id="show-all-surveys">SEE ALL SURVEYS</button>
-      <button type="button" class="btn btn-primary btn-block" id="create-own-survey">CREATE YOUR OWN SURVEY</button>
+      <button type="button" class="btn btn-primary btn-block">CREATE YOUR OWN SURVEY</button>
 
     </div>
   </section>
@@ -146,7 +146,7 @@
           </div>
         </div>
       </div> -->
-    </div>
+    </section>
 
   <!--///////////////////////////CREATE SURVEY////////////////////////////////////////////-->
   <!-- <section class="new-survey-section" id="create-survey-section" style="display: block">
