--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
 <body>
   <!--////////////////////////////////////// FIRST NAV BAR /////////////////////////////////////-->
   <section class="sign-up-log-in">
-    <div id="navbar-at-sign-up" class="navbar navbar-expand-lg navbar-light" style="background: #1161ee; height: 80px; font-weight: bold">
-      <a style="margin: 0 auto; color: white;"> BEST SURVEY PROJECT </a>
-      <a style="margin: 0 auto; color: white;"> ABOUT </a>
-      <a style="margin: 0 auto; color: white;"> ANOTHER </a>
-      <a style="margin: 0 auto; color: white;"> LOST HORIZON TEAM </a>
+    <div class="div-with-sign-up-nav-bar">
+      <div id="navbar-at-sign-up" class="navbar navbar-expand-lg navbar-light" style="background: #1161ee; height: 80px; font-weight: bold">
+        <a style="margin: 0 auto; color: white;"> BEST SURVEY PROJECT </a>
+        <a style="margin: 0 auto; color: white;"> ABOUT </a>
+        <a style="margin: 0 auto; color: white;"> ANOTHER </a>
+        <a style="margin: 0 auto; color: white;"> LOST HORIZON TEAM </a>
+      </div>
     </div>
 
 
@@ -73,10 +75,10 @@
 
     <!--/////////////////////////////////// NAV BAR /////////////////////////////////////////////////////////////////////////////-->
     <div id="navbar" class="navbar navbar-expand-lg navbar-light hidden" style="background: #1161ee; height: 80px; font-weight: bold">
-      <a href="#home-menu" id="">HOME</a>
-      <a href="#see-all-surveys-section">SEE ALL SURVEYS</a>
-      <a href="#create-survey-section">CREATE SURVEY</a>
-      <a href="#change-password-section">CHANGE PASSWORD</a>
+      <a href="#home-menu" class="nav-home-btn">HOME</a>
+      <a href="#see-all-surveys-section" class="nav-see-all-btn">SEE ALL SURVEYS</a>
+      <a href="#create-survey-section" class="nav-create-btn">CREATE SURVEY</a>
+      <a href="#change-password-section" class="nav-change-password-btn">CHANGE PASSWORD</a>
       <a id="sign-out"><button class="btn btn-danger">SIGN OUT</button></a>
       <h3 id="display-survey-message">
         <!--Survey status displayed here -->
