Add hidden class to answer survey html

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
   </section>
 
   <!--///////////////////////////ANSWER SURVEY////////////////////////////////////////////-->
-  <section class="see-all-surveys-section survey-component" id="see-all-surveys-section">
+  <section class="see-all-surveys-section survey-component hidden" id="see-all-surveys-section">
     <!-- <div class="row">
       <h3 style="margin-left: 20px"> Question </h3>
       <div class="col jumbotron">
