Structure for "SEE ALL SURVEYS" created
Next in my list is styling the "see all surveys" section, and to start programmig for the following goals:

1) Make buttons dissapear after user submits and answer.
2) Show Answers in place of the buttons after user submits.

--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
 
     <!--////////////////////////////////////Home Menu////////////////////////////////////////////////////////////////////////////-->
     <div class="fancy jumbotron">
-      <h3 class=""> Know your audience </h3>
-
-      <button type="button" class="btn btn-primary btn-block" id="show-my-surveys">MANAGE MY SURVEYS</button>
-      <button type="button" class="btn btn-primary btn-block" id="show-all-surveys">SEE ALL SURVEYS</button>
+      <h3 class=""> <strong> LEARN YOUR AUDIENCE</strong></h3>
+      <br>
+      <button type="button" class="btn btn-primary btn-block" id="show-my-surveys"><strong>MANAGE MY SURVEYS</strong></button>
+      <button type="button" class="btn btn-primary btn-block" id="show-all-surveys"><strong>SEE ALL SURVEYS</strong></button>
       <button type="button" class="btn btn-primary btn-block">CREATE YOUR OWN SURVEY</button>
 
     </div>
