--- a/index.html
+++ b/index.html
@@ -133,18 +133,54 @@
     </svg>
     <!--Checkmark animation ends-->
   </div>
+
+  <div class="div-for-password-message-fail jumbotron" style="display: inline-block; margin-left: 1%">
+    <h1 class="display-password-message"> Password NOT <br /> Updated! </h1>
+    <p>Something went wrong</p>
+
+  </div>
 </section>
 
 <!--///////////////////////////CREATE SURVEY////////////////////////////////////////////-->
-<section class="new-survey-section" id="create-survey-section" style="display: block">
-  <div class="create-survey-div jumbotron hidden">
+<section class="new-survey-section" id="create-survey-section">
+  <div class="create-survey-div jumbotron hidden" style="display: inline-block">
     <div>
-      <h3>What Question will your survey ask?</h3>
+      <h3>What question will your survey ask?</h3>
     </div>
     <form id="new-survey-form">
       <textarea name="survey[question]" cols="30" rows="10" class="notes"></textarea>
       <button type="submit" class="btn btn-block btn-primary" style="width: 250px">SUBMIT SURVEY</button>
     </form>
+  </div>
+
+  <div class="div-for-create-survey-message jumbotron" style="display: inline-block; margin-bottom: -30px">
+    <h1 class="display-create-survey-message"> Survey <br /> Created!</h1>
+    <!--Checkmark animation starts-->
+    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
+      y="0px" width="170px" height="170px" viewBox="0 0 170 170" enable-background="new 0 0 170 170" xml:space="preserve">
+      <path id="circle" fill="none" stroke="#00c853" stroke-width="8" stroke-miterlimit="4" stroke-dasharray="none"
+        stroke-opacity="1" d="M 
+              7,   86 A 78,78 0 0 1 
+              86,  7    78,78 0 0 1 
+              164, 86   78,78 0 0 1 
+              86,  164  78,78 0 0 1 
+              7,   86 Z" />
+
+      <path fill="none" stroke="#00c853" stroke-width="8" stroke-miterlimit="4" stroke-dasharray="none" stroke-opacity="1"
+        d="m 
+                 33, 84 
+                 34, 38 
+                 68,-67" id="check" />
+    </svg>
+  </div>
+
+  <div class="div-for-create-survey-message-fail jumbotron" style="display: inline-block; margin-bottom: -30px">
+    <h1 class="display-create-survey-message"> Survey NOT <br /> Created! </h1>
+    <p>Something went wrong</p>
+
+  </div>
+
+
   </div>
 </section>
 
