Wire buttons to their respective HTML locations

--- a/index.html
+++ b/index.html
@@ -88,9 +88,12 @@
   <div class="fancy jumbotron">
     <h3 class=""> <strong> LEARN YOUR AUDIENCE</strong></h3>
     <br>
-    <button type="button" class="btn btn-primary btn-block" id="show-my-surveys"><strong>MANAGE MY SURVEYS</strong></button>
-    <button type="button" class="btn btn-primary btn-block" id="show-all-surveys"><strong>SEE ALL SURVEYS</strong></button>
-    <button type="button" class="btn btn-primary btn-block">CREATE YOUR OWN SURVEY</button>
+    <button type="button" class="btn btn-primary btn-block" onclick="location.href='#see-my-surveys-section';" id="show-my-surveys"><strong>MANAGE
+        MY SURVEYS</strong></button>
+    <button type="button" onclick="location.href='#see-all-surveys-section';" class=" btn btn-primary btn-block" id="show-all-surveys"><strong>SEE
+        ALL SURVEYS</strong></button>
+    <button type="button" onclick="location.href='#create-survey-section';" class="btn btn-primary btn-block">CREATE
+      YOUR OWN SURVEY</button>
 
   </div>
 </section>
