--- a/index.html
+++ b/index.html
@@ -17,10 +17,8 @@
 <section class="sign-up-log-in">
   <div class="div-with-sign-up-nav-bar">
     <div id="navbar-at-sign-up" class="navbar navbar-expand-lg navbar-light" style="background: #1161ee; height: 80px; font-weight: bold">
-      <a style="margin: 0 auto; color: white;"> BEST SURVEY PROJECT </a>
-      <a style="margin: 0 auto; color: white;"> ABOUT </a>
-      <a style="margin: 0 auto; color: white;"> ANOTHER </a>
-      <a style="margin: 0 auto; color: white;"> LOST HORIZON TEAM </a>
+      <a style="margin-left:15px; color: white;"> BEST SURVEY PROJECT </a>
+      <a style="margin-left:15px; color: white;"> LOST HORIZON TEAM </a>
     </div>
   </div>
 
