--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
         ALL SURVEYS</strong></button>
     <button type="button" onclick="location.href='#create-survey-section';" class="btn btn-primary btn-block">CREATE
       YOUR OWN SURVEY</button>
+    <!-- <a href="#see-my-surveys-section" class="nav-create-btn">MY SURVEYS</a> -->
 
   </div>
 </section>
@@ -119,17 +120,17 @@
     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
       y="0px" width="170px" height="170px" viewBox="0 0 170 170" enable-background="new 0 0 170 170" xml:space="preserve">
       <path id="circle" fill="none" stroke="#00c853" stroke-width="8" stroke-miterlimit="4" stroke-dasharray="none"
-        stroke-opacity="1" d="M 
-          7,   86 A 78,78 0 0 1 
-          86,  7    78,78 0 0 1 
-          164, 86   78,78 0 0 1 
-          86,  164  78,78 0 0 1 
+        stroke-opacity="1" d="M
+          7,   86 A 78,78 0 0 1
+          86,  7    78,78 0 0 1
+          164, 86   78,78 0 0 1
+          86,  164  78,78 0 0 1
           7,   86 Z" />
 
       <path fill="none" stroke="#00c853" stroke-width="8" stroke-miterlimit="4" stroke-dasharray="none" stroke-opacity="1"
-        d="m 
-             33, 84 
-             34, 38 
+        d="m
+             33, 84
+             34, 38
              68,-67" id="check" />
     </svg>
     <!--Checkmark animation ends-->
@@ -160,17 +161,17 @@
     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
       y="0px" width="170px" height="170px" viewBox="0 0 170 170" enable-background="new 0 0 170 170" xml:space="preserve">
       <path id="circle" fill="none" stroke="#00c853" stroke-width="8" stroke-miterlimit="4" stroke-dasharray="none"
-        stroke-opacity="1" d="M 
-              7,   86 A 78,78 0 0 1 
-              86,  7    78,78 0 0 1 
-              164, 86   78,78 0 0 1 
-              86,  164  78,78 0 0 1 
+        stroke-opacity="1" d="M
+              7,   86 A 78,78 0 0 1
+              86,  7    78,78 0 0 1
+              164, 86   78,78 0 0 1
+              86,  164  78,78 0 0 1
               7,   86 Z" />
 
       <path fill="none" stroke="#00c853" stroke-width="8" stroke-miterlimit="4" stroke-dasharray="none" stroke-opacity="1"
-        d="m 
-                 33, 84 
-                 34, 38 
+        d="m
+                 33, 84
+                 34, 38
                  68,-67" id="check" />
     </svg>
   </div>
@@ -198,9 +199,9 @@
         <p>The question of the survey (which I assume will look something like
           the
           folowing: {{log.question}}) is going to be here, so... there...</p>
-      </div>
+      </div> -->
 
-  </section>
+</section>
 
 
 
