fix bug where create survey form wasn't disappearing upon second logout

--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
 </section>
 
 <!--///////////////////////////CREATE SURVEY////////////////////////////////////////////-->
-<section class="new-survey-section" id="create-survey-section">
-  <div class="create-survey-div jumbotron hidden" style="display: inline-block">
+<section class="new-survey-section hidden" id="create-survey-section">
+  <div class="create-survey-div jumbotron" style="display: inline-block">
     <div>
       <h3>What question will your survey ask?</h3>
     </div>
@@ -179,9 +179,6 @@
   <div class="div-for-create-survey-message-fail jumbotron" style="display: inline-block; margin-bottom: -30px">
     <h1 class="display-create-survey-message"> Survey NOT <br /> Created! </h1>
     <p>Something went wrong</p>
-
-  </div>
-
 
   </div>
 </section>
