--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Best Survey</title>
+  <title>Anything but Trivial</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Do not add `link` tags-->
@@ -13,193 +13,44 @@
   <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
 </head>
 
-<!--////////////////////////////////////// FIRST NAV BAR /////////////////////////////////////-->
-<section class="sign-up-log-in">
-  <div class="div-with-sign-up-nav-bar">
-    <div id="navbar-at-sign-up" class="navbar navbar-expand-lg navbar-light" style="background: #1161ee; height: 80px; font-weight: bold">
-      <a style="margin-left:15px; color: white;"> BEST SURVEY PROJECT </a>
-      <a style="margin-left:15px; color: white;"> LOST HORIZON TEAM </a>
+<body>
+
+
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Dropdown
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Something else here</a>
+          </div>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#">Disabled</a>
+        </li>
+      </ul>
+      <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      </form>
     </div>
-  </div>
-
-
-  <!--///////////////////////////////////////SIGN UP / LOG IN FORM /////////////////////////////////////////////////////////////////////////-->
-  <div class="container-fluid sign-in-and-out">
-    <div class="makeInline1">
-      <div class="sign-up-div jumbotron">
-
-        <form id="sign-up-form">
-          <fieldset>
-            <legend> Sign up </legend>
-            <input placeholder="Enter your Email" class="form-control" style="width: 300px" name="credentials[email]"
-              type="email" />
-            <input placeholder="Enter your password" class="form-control" style="width: 300px" name="credentials[password]"
-              type="password" />
-            <input placeholder="Re-enter password" class="form-control" style="width: 300px" name="credentials[password_confirmation]"
-              type="password" />
-            <br />
-            <input type="submit" id="sign-up-button" class='theButton btn btn-primary' value="Sign Up" />
-          </fieldset>
-        </form>
-        <br />
-        <h3 id="display-sign-up-message">
-          <!--Status shall be displayed here-->
-        </h3>
-      </div>
-
-      <div class="sign-in-div jumbotron">
-        <form id="sign-in-form">
-          <fieldset>
-            <legend> Sign in </legend>
-            <input placeholder="Enter your Email" name="credentials[email]" class="form-control" style="width: 300px"
-              type="email" />
-            <input placeholder="Enter your password" name="credentials[password]" class="form-control" style="width: 300px"
-              type="password" />
-            <br />
-            <input type="submit" class='theButton btn btn-primary' value="Log In !" />
-          </fieldset>
-        </form>
-        <h3 id="display-log-in-message">
-          <!--Status shall be displayed here-->
-        </h3>
-      </div>
-      <br />
-    </div>
-  </div>
-</section>
-
-<section class="home-menu hidden" id="home-menu">
-
-  <!--/////////////////////////////////// NAV BAR /////////////////////////////////////////////////////////////////////////////-->
-  <div id="navbar" class="navbar navbar-expand-lg navbar-light hidden" style="background: #1161ee; height: 80px; font-weight: bold">
-    <a href="#home-menu" class="nav-home-btn">HOME</a>
-    <a href="#see-all-surveys-section" class="nav-see-all-btn">SEE ALL SURVEYS</a>
-    <a href="#create-survey-section" class="nav-create-btn">CREATE SURVEY</a>
-    <a href="#change-password-section" class="nav-change-password-btn">CHANGE PASSWORD</a>
-    <a id="sign-out"><button class="btn btn-danger">SIGN OUT</button></a>
-    <h3 id="display-survey-message">
-      <!--Survey status displayed here -->
-    </h3>
-  </div>
-
-  <!--////////////////////////////////////Home Menu////////////////////////////////////////////////////////////////////////////-->
-  <div class="fancy jumbotron">
-    <h3 class=""> <strong> LEARN YOUR AUDIENCE</strong></h3>
-    <br>
-    <button type="button" class="btn btn-primary btn-block" onclick="location.href='#see-my-surveys-section';" id="show-my-surveys"><strong>MANAGE
-        MY SURVEYS</strong></button>
-    <button type="button" onclick="location.href='#see-all-surveys-section';" class=" btn btn-primary btn-block" id="show-all-surveys"><strong>SEE
-        ALL SURVEYS</strong></button>
-    <button type="button" onclick="location.href='#create-survey-section';" class="btn btn-primary btn-block">CREATE
-      YOUR OWN SURVEY</button>
-    <!-- <a href="#see-my-surveys-section" class="nav-create-btn">MY SURVEYS</a> -->
-
-  </div>
-</section>
-
-<!--/////////////////////////////////////Change Password Form///////////////////////////////////////////////////////////////////////////-->
-
-<section class="change-password-section hidden" id="change-password-section">
-  <div class="change-password-div jumbotron">
-    <form id="change-password-form">
-      <fieldset>
-        <legend> Change Password? </legend>
-        <input placeholder="Enter your old password" name="passwords[old]" class="form-control" type="password" />
-        <input placeholder="Enter your new password" name="passwords[new]" class="form-control" type="password" />
-        <br />
-        <input type="submit" class='theButton btn btn-primary' value="Change it!" />
-      </fieldset>
-    </form>
-    <div>
-    </div>
-  </div>
-  <div class="div-for-password-message jumbotron">
-    <h1 id="display-password-status-message"> Successful <br /> Change!
-    </h1>
-    <!--Checkmark animation starts-->
-    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
-      y="0px" width="170px" height="170px" viewBox="0 0 170 170" enable-background="new 0 0 170 170" xml:space="preserve">
-      <path id="circle" fill="none" stroke="#00c853" stroke-width="8" stroke-miterlimit="4" stroke-dasharray="none"
-        stroke-opacity="1" d="M
-          7,   86 A 78,78 0 0 1
-          86,  7    78,78 0 0 1
-          164, 86   78,78 0 0 1
-          86,  164  78,78 0 0 1
-          7,   86 Z" />
-
-      <path fill="none" stroke="#00c853" stroke-width="8" stroke-miterlimit="4" stroke-dasharray="none" stroke-opacity="1"
-        d="m
-             33, 84
-             34, 38
-             68,-67" id="check" />
-    </svg>
-    <!--Checkmark animation ends-->
-  </div>
-
-  <div class="div-for-password-message-fail jumbotron" style="display: inline-block; margin-left: 1%">
-    <h1 class="display-password-message"> Password NOT <br /> Updated! </h1>
-    <p>Something went wrong</p>
-
-  </div>
-</section>
-
-<!--///////////////////////////CREATE SURVEY////////////////////////////////////////////-->
-<section class="new-survey-section hidden" id="create-survey-section">
-  <div class="create-survey-div jumbotron" style="display: inline-block">
-    <div>
-      <h3>What question will your survey ask?</h3>
-    </div>
-    <form id="new-survey-form">
-      <textarea name="survey[question]" cols="30" rows="10" class="notes"></textarea>
-      <button type="submit" class="btn btn-block btn-primary" style="width: 250px">SUBMIT SURVEY</button>
-    </form>
-  </div>
-
-  <div class="div-for-create-survey-message jumbotron" style="display: inline-block; margin-bottom: -30px">
-    <h1 class="display-create-survey-message"> Survey <br /> Created!</h1>
-    <!--Checkmark animation starts-->
-    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
-      y="0px" width="170px" height="170px" viewBox="0 0 170 170" enable-background="new 0 0 170 170" xml:space="preserve">
-      <path id="circle" fill="none" stroke="#00c853" stroke-width="8" stroke-miterlimit="4" stroke-dasharray="none"
-        stroke-opacity="1" d="M
-              7,   86 A 78,78 0 0 1
-              86,  7    78,78 0 0 1
-              164, 86   78,78 0 0 1
-              86,  164  78,78 0 0 1
-              7,   86 Z" />
-
-      <path fill="none" stroke="#00c853" stroke-width="8" stroke-miterlimit="4" stroke-dasharray="none" stroke-opacity="1"
-        d="m
-                 33, 84
-                 34, 38
-                 68,-67" id="check" />
-    </svg>
-  </div>
-
-  <div class="div-for-create-survey-message-fail jumbotron" style="display: inline-block; margin-bottom: -30px">
-    <h1 class="display-create-survey-message"> Survey NOT <br /> Created! </h1>
-    <p>Something went wrong</p>
-
-  </div>
-</section>
-
-<!-- MY SURVEYS SECTION -->
-<section class="see-my-surveys-section my-surveys-component hidden" id="see-my-surveys-section">
-  <h2>these are my surveys!</h2>
-</section>
-
-<!--///////////////////////////ANSWER SURVEY////////////////////////////////////////////-->
-<section class="see-all-surveys-section survey-component hidden" id="see-all-surveys-section">
-  <!-- <div class="row">
-      <h3 style="margin-left: 20px"> Question </h3>
-      <div class="col jumbotron">
-        <p>The question of the survey (which I assume will look something like
-          the
-          folowing: {{log.question}}) is going to be here, so... there...</p>
-      </div> -->
-
-</section>
-
+  </nav>
 
 
 </body>
